<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Flibusta book loading</string>
    <string name="books_loaded_channel">Loaded books</string>
    <string name="shifts_reminder" translatable="false">Loaded books notifications</string>
    <string name="use_light_style">Use light style</string>
    <string name="snackbar_found_update_message">New update available!</string>
    <string name="snackbar_update_action_message">Update now</string>
    <string name="update_file_name">Flibusta books</string>
    <string name="file_not_found_message">File not found!</string>
    <string name="go_home">go home</string>
    <string name="use_dark_mode">Use dark mode</string>
    <string name="show_last">New books</string>
    <string name="look">View</string>
    <string name="show_random">Random book</string>
    <string name="navigation">Navigation</string>
    <string name="buy_me_coffee">Buy me coffee</string>
    <string name="use_light_fat_style">Lite fat style</string>
    <string name="use_normal_style">Use normal</string>
    <string name="use_light_fast_style">Fast light style</string>
    <string name="use_fat_fast_style">Fat fast style</string>
    <string name="tor_is_stopped">Can\'t get data…</string>
    <string name="tor_restart_dialog_message">Can\'t get data. Some reasons can be. Tap button down for next try</string>
    <string name="restart_tor_message">Try again</string>
    <string name="share_link_message">Share link</string>
    <string name="share_url_message">Sharing page link</string>
    <string name="share_url_title">Share link with</string>
    <string name="download_folder_changed_message">Download folder changed on</string>
    <string name="title_activity_opds">OPDS</string>
    <string name="whoSearchMessage">Search what?</string>
    <string name="search_author_message">Author</string>
    <string name="search_book_message">Book</string>
    <string name="forward_button">Forward</string>
    <string name="downloads_dialog_header">Select download type</string>
    <string name="download_message">Download</string>
    <string name="select_author_view_message">Select author view</string>
    <string name="select_authors_choose_message">Choose a author</string>
    <string name="search_genre_message">Genre</string>
    <string name="search_sequence_message">Sequences</string>
    <string name="load_more_button">Load more</string>
    <string name="select_sequences_choose_message">Select sequence</string>
    <string name="book_menu">book menu</string>
    <string name="hide_read">Hide read</string>
    <string name="initialize_tor_message">Initialize TOR…</string>
    <string name="showNewDialogTitle">Select new type</string>
    <string name="wait_tor_loading_message">Wait for TOR load</string>
    <string name="download_books_msg">Download all selected books</string>
    <string name="download_books_title">Load started</string>
    <string name="load_waiting_message">Load and handle data, be patient</string>
    <string name="load_waiting_title">Do my work</string>
    <string name="sort_list">Sort by</string>
    <string name="force_start">Force start</string>
    <string name="clear_search_history_message">Clear search history</string>
    <string name="subscribe_msg">Subscribe</string>
    <string name="delete_item" translatable="false">deleteItem</string>
    <string name="download_folder_changed_message_new">Download folder changed</string>
    <string name="subscribes_channel">subscribes</string>
    <string name="subscribe_description">Subscribe notifications</string>
    <string name="discard_favorite_type">Discard favorite type</string>
    <string name="book_readed_message">Book readed</string>
    <string name="book_downloaded_message">Book downloaded</string>
    <string name="download_only_this_format">Download only this format. Other will be ignored</string>
    <string name="remember_format">Remember type</string>
    <string name="do_not_re_download">Download again</string>
    <string name="go_to_test_message">Test app</string>
    <string name="backward">backward</string>
    <string name="enter_value_message">Enter value</string>
    <string name="begin_tor_init_msg">Begin initialize</string>
    <string name="default_app_version">1.0</string>
    <string name="restore_settings_message">Restore settings</string>
    <string name="misc_channel">misc notifications</string>
    <string name="misc_description">misc notifications</string>
    <string name="show_previews">Show books covers</string>
    <string name="preview_image" translatable="false">preview_image</string>
    <string name="cover">cover</string>
    <string name="tor_cant_load_message">Tor not loaded</string>
    <string name="tor_not_start_body">Tor can\'t start. You can try again or wait for good internet connection. Sorry for that.</string>
    <string name="try_again_message">Try again!</string>
    <string name="try_later_message">Thanks, close app, i\'ll try later</string>
    <string name="application_version_message">Application version is %s</string>
    <string name="launch_begin_message">Launch initiated!</string>
    <string name="tor_load_waiting_internet_message">Tor waiting stable internet connection</string>
    <string name="tor_continue_loading" tools:ignore="PluralsCandidate">Tor loading by %d seconds</string>
    <string name="subscription_describe">Тут можно подписаться на новинки книжной индустрии. Выберите, на что вы хотите подписаться, после этого нажмите кнопку \'Подписаться\' и каждый день в полдень программа будет проверять, не появилось ли что-то новое по интересующей вас теме. Если найдётся что-то интересное- вы получите уведомление!</string>
    <string name="title_activity_webview">WebView</string>
    <string name="show_all_results_switcher_text">Show all result</string>
    <string name="download_all_button">Download all</string>
    <string name="download_selected_button">Download selected</string>
    <string name="fab_cancel_label">Cancel</string>
    <string name="title_activity_download_schedule">Download schedule</string>
    <string name="waiting_download_message">Waiting download</string>
    <string name="stop_download_message">Stop download</string>
    <string name="continue_download_message">Continue download</string>
    <string name="books_not_selected_message">No book selected</string>
    <string name="select_books_for_download_message">Select books for download</string>
    <string name="download_selected_message">Download selected</string>
    <string name="books_not_found_message">Books not found</string>
    <string name="download_unloaded_button">Download new</string>
    <string name="re_download_dialog_header_message">Have downloads queue</string>
    <string name="re_download_dialog_body_message">Wish you continue download?</string>
    <string name="download_continued_message">Download continued</string>
    <string name="ok">OK</string>
    <string name="no">No, thanks</string>
    <string name="book_added_to_schedule_message">Book added to schedule</string>
    <string name="tor_init_error_message">TOR init error!</string>
    <string name="request_restart_tor_message">Restart TOR!</string>
    <string name="download_paused_message">Downloading paused!</string>
    <string name="book_unreachable_message">%s :book is unreachable in (%s). It will be removed from download queue. Sorry for this</string>
    <string name="book_load_error_message">Book load error</string>
    <string name="launch_cancelled_message">Launch cancelled</string>
    <string name="restart_tor_from_notification_message">Retry</string>
    <string name="cancel_download_from_notification_message">Drop</string>
    <string name="later_message">Later</string>
    <string name="switch_layout_message">Switch layout</string>
    <string name="hide_digest_title">Hide digests</string>
    <string name="navigation_go_webview">WebView mode</string>
    <string name="navigation_go_opds">OPDS mode</string>
    <string name="actions">Actions</string>
    <string name="navigation_go_settings">Settings</string>
    <string name="download_preferences">Download preferences</string>
    <string name="title_change_download_folder">Change download folder</string>
    <string name="pref_download_location" translatable="false">download_location_dir</string>
    <string name="navigation_go_downloads">DownloadSchedule</string>
    <string name="reserve_preferences">Preferences backup</string>
    <string name="update_preferences">Update preferences</string>
    <string name="connection_preferences">Connection settings</string>
    <string name="navigation_go_subscriptions">Subscriptions</string>
    <string name="title_favorite_format_preference">Favorite format</string>
    <string name="hide_downloaded">Hide downloaded</string>
    <string name="view_preferences">View preferences</string>
    <string name="pref_is_eink" translatable="false">is eink</string>
    <string name="pref_create_author_folder" translatable="false">create author folder</string>
    <string name="pref_create_sequence_folder" translatable="false">create sequence folder</string>
    <string name="pref_autostart_search" translatable="false">autostart search</string>
    <string name="pref_custom_flibusta_mirror" translatable="false">custom flibusta mirror</string>
    <string name="add_bookmark">Add bookmark</string>
    <string name="navigation_go_bookmarks">Bookmarks</string>
    <string name="pref_create_additional_folders" translatable="false">create additional folders</string>
    <string name="pref_use_custom_mirror" translatable="false">use custom mirror</string>
    <string name="message_create_sequence_folder">Create sequences folders</string>
    <string name="message_create_author_folder">Create authors folder</string>
    <string name="title_use_filter">Use filter</string>
    <string name="pref_download_location_alt" translatable="false">download location alt</string>
    <string name="title_change_download_folder_alt">Change download folder(alternative)</string>
    <string name="flibusta_not_available_message">Oops, Flibusta is not available</string>
    <string name="close_app_message">Close app</string>
    <string name="try_connect_again_message">Connect again</string>
    <string name="flibusta_not_available_body">Flibusta don\'t respond. Close app, try again, or let me check, until server is coming back (you get notification, when it is)</string>
    <string name="start_checker_message">Start checker</string>
    <string name="show_main_message">Continue</string>
    <string name="check_server_on_start">Check flibusta availability when app starts</string>
    <string name="skip_load_screen_message">Skip load screen</string>
    <string name="skip_load_screen_summary">Very alpha! Skip load screen and dot\'t wait for TOR load on start</string>
    <string name="pref_clear_view" translatable="false">clear view</string>
    <string name="pref_custom_pic_mirror" translatable="false">custom_pic_mirror</string>
    <string name="filtrating_title">Filtrating</string>
    <string name="view_title">View</string>
    <string name="downloads_title">Downloads</string>
    <string name="filter_preferences">Filter preferences</string>
    <string name="sequences_in_author_dirs_message">Sequences in author dir</string>
    <string name="sequences_and_author_dirs_title">Sequences and author dirs</string>
    <string name="select_all_books_title">Select all</string>
    <string name="select_no_books_title">Select no one book</string>
    <string name="invert_selection_title">Invert book selection</string>
    <string name="cancel_selection_title">Cancel selection</string>
    <string name="test_connection">Testing connection</string>
    <string name="vpn_enabled_but_not_work_warning">You choose VPN mode for connection. Check it state, looks like you forgot enable it</string>
    <string name="get_vpn_message">Get VPN</string>
</resources>