<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@android:string/search_go"
        yourapp:actionViewClass="androidx.appcompat.widget.SearchView"
        yourapp:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_sort_by"
        android:icon="@drawable/ic_sort_white_24dp"
        android:title="@string/sort_list"
        yourapp:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_bookmark"
        android:icon="@drawable/ic_baseline_bookmark_24"
        android:title="@string/add_bookmark"
        yourapp:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_new"
        android:icon="@drawable/ic_new_white_24dp"
        android:title="@string/show_last"
        yourapp:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuLoadAllBooks"
        android:checkable="true"
        android:title="@string/show_all_results_switcher_text"
        yourapp:showAsAction="never" />

    <item android:title="@string/view_title">
        <menu>
            <item
                android:id="@+id/menuUseDarkMode"
                android:checkable="true"
                android:title="@string/use_dark_mode"
                yourapp:showAsAction="never" />
            <item
                android:id="@+id/switchLayout"
                android:title="@string/switch_layout_message"
                yourapp:showAsAction="never" />
            <item
                android:id="@+id/showPreviews"
                android:checkable="true"
                android:title="@string/show_previews"
                yourapp:showAsAction="never" />
        </menu>
    </item>

    <item android:title="@string/downloads_title">
        <menu>
            <item
                android:id="@+id/menuCreateAuthorDir"
                android:checkable="true"
                android:title="@string/message_create_author_folder" />
            <item
                android:id="@+id/menuCreateSequenceDir"
                android:checkable="true"
                android:title="@string/message_create_sequence_folder"/>
            <item
                android:id="@+id/loadSequencesToAuthorDir"
                android:checkable="true"
                android:title="@string/sequences_in_author_dirs_message"/>
            <item
                android:id="@+id/menuCreateAdditionalDirs"
                android:checkable="true"
                android:title="@string/sequences_and_author_dirs_title"/>
            <item
                android:id="@+id/discardFavoriteType"
                android:title="@string/discard_favorite_type" />
        </menu>

    </item>

    <item android:title="@string/filtrating_title">
        <menu>
            <item
                android:id="@+id/hideDigests"
                android:checkable="true"
                android:title="@string/hide_digest_title"
                yourapp:showAsAction="never" />
            <item
                android:id="@+id/hideReadSwitcher"
                android:checkable="true"
                android:title="@string/hide_read"
                yourapp:showAsAction="never" />
            <item
                android:id="@+id/hideDownloadedSwitcher"
                android:checkable="true"
                android:title="@string/hide_downloaded"
                yourapp:showAsAction="never" />
            <item
                android:id="@+id/useFilter"
                android:checkable="true"
                android:title="@string/title_use_filter"
                yourapp:showAsAction="never" />
        </menu>
    </item>
    <item
        android:id="@+id/clearSearchHistory"
        android:title="@string/clear_search_history_message"
        yourapp:showAsAction="never" />
</menu>