<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <SwitchPreferenceCompat
        app:key="check availability"
        android:title="@string/check_server_on_start"
        android:defaultValue="true"/>
    <SwitchPreferenceCompat
        app:key="skip load screen"
        android:title="@string/skip_load_screen_message"
        android:summary="@string/skip_load_screen_summary"
        android:defaultValue="false"/>
    <CheckBoxPreference
        android:defaultValue="false"
        android:summary="Оповестить об использовании внешнего VPN. В этом случае внутренний клиент TOR будет отключен и траффик приложения не будет обрабатываться. В этом случае вся ответственность за получение контента ложится на внешний VPN. Если вы будете получать сообщения об ошибках загрузки- значит, он работает неправильно."
        app:key="external vpn"
        app:title="Использование внешнего VPN" />
    <SwitchPreferenceCompat
        app:key="@string/pref_use_custom_mirror"
        android:title="Использовать кастомное зеркало"
        android:defaultValue="false"/>
    <EditTextPreference
        android:title="Назначить зеркало Флибусты"
        android:summary="Зеркало в виде https://mirror.net Тут можно назначить зеркало, с которого будет загружаться информация. При проблемах с соединением поставьте пустое значение"
        app:key="@string/pref_custom_flibusta_mirror"/>
    <EditTextPreference
        android:title="Зеркало загрузки обложек"
        android:summary="Зеркало в виде https://mirror.net Тут можно назначить зеркало, с которого будут загружаться обложки книг. При проблемах с соединением поставьте пустое значение"
        app:key="@string/pref_custom_pic_mirror"/>
</PreferenceScreen>