<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference
        app:key="@string/pref_download_location"
        app:title="@string/title_change_download_folder" />
    <Preference
        app:key="@string/pref_download_location_alt"
        app:title="@string/title_change_download_folder_alt" />

    <PreferenceCategory android:title="Настройки для OPDS">

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:summaryOff="Книги не загружаются автоматически. Перейдите во вкладку 'Очередь загрузки' в боковом меню и нажмите на кнопку для начала загрузки"
            android:summaryOn="Загрузка книг начинается сразу после добавления в очередь"
            android:title="Автозагрузка книг"
            app:key="download auto start" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:summaryOff="Уведомление прогресса загрузки книги не отображается"
            android:summaryOn="Будет показано уведомление с деталями загрузки книги"
            android:title="Прогресс загрузки книги"
            app:key="show download progress" />
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:summaryOff="Ранее скачанные файлы не будут загружены заново при добавлении в очередь скачивания"
            android:summaryOn="Ранее скачанные файлы будут загружены повторно при повторном добавлени в очередь"
            android:title="Повторная загрузка"
            app:key="re download" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:summaryOff="Отдельные папки для авторов не создаются"
            android:summaryOn="Будут созданы отдельные папки под каждого автора"
            android:title="Папки авторов"
            app:key="@string/pref_create_author_folder" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:summaryOff="Отдельные папки для серий не создаются"
            android:summaryOn="Будут созданы отдельные папки под каждой серии"
            android:title="Папки серий"
            app:key="@string/pref_create_sequence_folder" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:summaryOff="Серии скачиваются в папку автора (если папка автора создаётся)"
            android:summaryOn="Серии не добавляются в папку автора а скачиваются в отдельную папку в корне"
            android:title="Доп. папки"
            app:key="@string/pref_create_additional_folders" />

        <DropDownPreference
            android:entries="@array/favorite_mime_names"
            android:entryValues="@array/favorite_mime_types"
            android:summary="Книги будут по возможности скачиваться в выбранном формате без запроса"
            android:title="@string/title_favorite_format_preference"
            app:key="favorite format"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>
</PreferenceScreen>