<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2018 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:title="@string/view_preferences"
        app:icon="@drawable/ic_baseline_eye_24"
        app:fragment="net.veldor.flibustaloader.ui.SettingsActivity$ViewPreferencesFragment"/>

    <Preference
        app:title="@string/filter_preferences"
        app:icon="@drawable/ic_baseline_filter__alt_24"
        app:fragment="net.veldor.flibustaloader.ui.SettingsActivity$FilterPreferencesFragment"/>

    <Preference
        app:title="@string/download_preferences"
        app:icon="@drawable/ic_cloud_download_black_24dp"
        app:fragment="net.veldor.flibustaloader.ui.SettingsActivity$DownloadPreferencesFragment"/>

    <Preference
        app:title="@string/reserve_preferences"
        app:icon="@drawable/ic_backup_black_24dp"
        app:summary="Резервирование и восстановление настроек"
        app:fragment="net.veldor.flibustaloader.ui.SettingsActivity$ReservePreferencesFragment"/>

    <Preference
        app:title="@string/update_preferences"
        app:icon="@drawable/ic_baseline_sync_black_24"
        app:fragment="net.veldor.flibustaloader.ui.SettingsActivity$UpdatePreferencesFragment"/>

    <Preference
        app:title="@string/connection_preferences"
        app:icon="@drawable/ic_baseline_vpn_key_black_24"
        app:fragment="net.veldor.flibustaloader.ui.SettingsActivity$ConnectionPreferencesFragment"/>
</PreferenceScreen>