<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@android:string/search_go"
        yourapp:actionViewClass="android.support.v7.widget.SearchView"
        yourapp:showAsAction="ifRoom" />
    <item
        android:id="@+id/goHome"
        android:icon="@drawable/ic_home_white_24dp"
        android:title="@string/go_home"
        yourapp:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menuUseLightStyle"
        android:title="@string/use_light_style"
        android:checkable="true"
        yourapp:showAsAction="never"/>
    <item
        android:id="@+id/menuUseDarkMode"
        android:title="@string/use_dark_mode"
        android:checkable="true"
        yourapp:showAsAction="never"/>
</menu>