<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <SwitchPreferenceCompat
        app:key="night mode"
        android:defaultValue="false"
        android:summary="Активирован"
        android:summaryOff="Обычный вид"
        android:title="Ночной режим" />
    <SwitchPreferenceCompat
        app:key="show more btn"
        android:defaultValue="false"
        android:summary="Следующая страница будет грузиться после нажатия на кнопку внизу списка книг"
        android:summaryOff="Следующая страница грузится автоматически при пролистывании списка книг до конца"
        android:title="Кнопка страницы" />
    <SwitchPreferenceCompat
        app:key="@string/pref_is_eink"
        android:defaultValue="false"
        android:summary="Отключены фоновые изображения и GIF"
        android:summaryOff="Обычный вид"
        android:title="Тема для e-ink" />
    <SwitchPreferenceCompat
        app:key="@string/pref_autostart_search"
        android:defaultValue="true"
        android:title="Автофокус поиска"
        android:summaryOn="Автоматически открывать окно ввода, когда переключен тип поиска"
        android:summaryOff="Окно поиска автоматически не открывается" />
    <SwitchPreferenceCompat
        app:key="@string/pref_clear_view"
        android:defaultValue="false"
        android:summary="Фон и GIF не отображаются"
        android:summaryOff="Фон и GIF отображаются"
        android:title="Скрыть картинки" />
</PreferenceScreen>